--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Jul 12 21:33:10 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/iso_8859_3.c, test/ruby/enc/test_case_comprehensive.rb:
+	  Implement non-ASCII case conversion for ISO-8859-3, by Takuya Miyamoto.
+
+	* test/ruby/enc/test_case_comprehensive.rb: Extend special treatment
+	  for Turkic.
+
 Tue Jul 12 01:25:09 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* configure.in, lib/mkmf.rb, win32/Makefile.sub (CSRCFLAG): make the
