* revert r55642 (previous commit) because of test failure at   https://travis-ci.org/ruby/ruby/builds/144148780
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55643 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 12 21:59:40 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* revert r55642 (previous commit) because of test failure at
+	  https://travis-ci.org/ruby/ruby/builds/144148780
+
 Tue Jul 12 21:33:10 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/iso_8859_3.c, test/ruby/enc/test_case_comprehensive.rb:
