* enc/iso_8859_13.c, enc/windows_1257.c: Split Windows-1257 from   ISO-8859-13 to be able to implement different case conversions.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55650 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 13 10:31:39 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/iso_8859_13.c, enc/windows_1257.c: Split Windows-1257 from
+	  ISO-8859-13 to be able to implement different case conversions.
+
 Wed Jul 13 09:02:30 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/iso_8859_3.c, test/ruby/enc/test_case_comprehensive.rb:
