--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 13 13:08:30 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/iso_8859_7.c, enc/windows_1253.c: Split Windows-1253 from
+	  ISO-8859-7 to be able to implement different case conversions.
+
 Wed Jul 13 10:50:12 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/iso_8859_13.c, test/ruby/enc/test_case_comprehensive.rb:
