* enc/iso_8859_9.c, enc/windows_1254.c: Split Windows-1254 from   ISO-8859-9 to be able to implement different case conversions.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55653 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 13 13:19:12 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/iso_8859_9.c, enc/windows_1254.c: Split Windows-1254 from
+	  ISO-8859-9 to be able to implement different case conversions.
+
 Wed Jul 13 13:08:30 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/iso_8859_7.c, enc/windows_1253.c: Split Windows-1253 from
