--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Jul 13 14:16:03 2016  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_method.c (method_entry_get_without_cache): check
+	  undefined method even if ruby_running is FALSE.
+
+	  We haven't call "undef"ed methods before ruby_running.
+	  So that this issue does not make troubles.
+
 Wed Jul 13 14:15:22 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/windows_1254.c: Adjust variable/macro names.
