* iseq.c (Init_ISeq): undef ISeq.translate and ISeq.load_iseq   to prevent calling super classes' methods.
  Without this patch, you can write workaround like:

    class << RubyVM::InstructionSequence
      def translate; end
      undef translate
    end

* test/ruby/test_iseq.rb: add a test.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55656 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+Wed Jul 13 14:22:50 2016  Koichi Sasada  <ko1@atdot.net>
+
+	* iseq.c (Init_ISeq): undef ISeq.translate and ISeq.load_iseq
+	  to prevent calling super classes' methods.
+
+	  Without this patch, you can write workaround like:
+
+	    class << RubyVM::InstructionSequence
+	      def translate; end
+	      undef translate
+	    end
+
+	* test/ruby/test_iseq.rb: add a test.
+
 Wed Jul 13 14:16:03 2016  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_method.c (method_entry_get_without_cache): check
