* math.c (rb_math_sqrt): r55646 must use f_signbit.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55657 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jul 13 14:28:33 2016  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* math.c (rb_math_sqrt): r55646 must use f_signbit.
+
 Wed Jul 13 14:22:50 2016  Koichi Sasada  <ko1@atdot.net>
 
 	* iseq.c (Init_ISeq): undef ISeq.translate and ISeq.load_iseq
