--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Jul 13 14:40:04 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/iso_8859_5.c, test/ruby/enc/test_case_comprehensive.rb:
+	  Implement non-ASCII case conversion for ISO-8859-5, by Masaru Onodera.
+
+	* test/ruby/enc/test_case_comprehensive.rb: Fix order of encodings.
+
 Wed Jul 13 14:28:33 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* math.c (rb_math_sqrt): r55646 must use f_signbit.
