* enc/iso_8859_1.c, enc/iso_8859_4.c: Avoid setting modification flag if   there is no modification.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55660 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 13 15:19:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/iso_8859_1.c, enc/iso_8859_4.c: Avoid setting modification flag if
+	  there is no modification.
+
 Wed Jul 13 14:40:04 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/iso_8859_5.c, test/ruby/enc/test_case_comprehensive.rb:
