--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Jul 13 15:59:59 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* math.c (_USE_MATH_DEFINES): it must be set before including internal.h
+	  because internal.h includes ruby.h, ruby.h includes win32.h, and
+	  win32.h includes system's math.h.
+	  this change is to get rid of a compiler warning (redefinition of
+	  a macro) introduced at r55641.
+
 Wed Jul 13 15:19:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/iso_8859_1.c, enc/iso_8859_4.c: Avoid setting modification flag if
