--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Wed Jul 13 16:08:08 2016  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (gc_mark_roots): should mark the VM object itself to mark
+	  singleton class of the VM object.
+	  Before this patch, we only set mark bit for the VM object and
+	  invoke mark function separately.
+	  [Bug #12583]
+
+	* test/ruby/test_gc.rb: add a test.
+
 Wed Jul 13 15:59:59 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* math.c (_USE_MATH_DEFINES): it must be set before including internal.h
