common.mk: update enc/unicode/name2ctype.h
* Makefile.in (enc/unicode/name2ctype.h): remove stale recipe,
  which did not support Unicode age properties.
* common.mk (enc/unicode/name2ctype.h): update by --header option
  of tool/enc-unicode.rb.  enc/unicode/name2ctype.kwd file has not
  been used.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55678 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-Thu Jul 14 13:42:48 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Thu Jul 14 17:26:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* Makefile.in (enc/unicode/name2ctype.h): remove stale recipe,
+	  which did not support Unicode age properties.
+
+	* common.mk (enc/unicode/name2ctype.h): update by --header option
+	  of tool/enc-unicode.rb.  enc/unicode/name2ctype.kwd file has not
+	  been used.
 
 	* common.mk (enc/unicode/name2ctype.kwd): rule to create from
 	  Unicode data files, used only when the target does not exist.
