--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Jul 15 15:32:13 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* time.c (time_arg): it seems that this function sometimes causes SEGV
+	  on mswin CI, then force to prevent `vtm->subsecx` from GC.  this is
+	  experimental.
+
 Fri Jul 15 09:53:48 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* enc/unicode/case-folding.rb, tool/enc-unicode.rb: check if
