--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Jul 15 17:08:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* util.c (ruby_strtod): do not underflow only by preceeding zeros,
+	  which may be canceled out by the exponent.
+	  http://twitter.com/kazuho/status/753829998767714305
+
 Fri Jul 15 15:32:13 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* time.c (time_arg): it seems that this function sometimes causes SEGV
