--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul 15 22:05:13 2016  Naohisa Goto  <ngotogenome@gmail.com>
+
+	* string.c (str_buf_cat): Fix potential interger overflow of capa.
+	  In addition, termlen is used instead of +1.
+
 Fri Jul 15 21:30:38 2016  Naohisa Goto  <ngotogenome@gmail.com>
 
 	* string.c (str_buf_cat): Fix capa size for embed string.
