* lib/unicode_normalize/tables.rb: Remove   UnicodeNormalize::UNICODE_VERSION (#12546).
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55706 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 19 18:21:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* lib/unicode_normalize/tables.rb: Remove
+	  UnicodeNormalize::UNICODE_VERSION (#12546).
+
 Tue Jul 19 15:38:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* variable.c (rb_local_constants_i): exclude private constants
