enum.c: Enumerable#uniq
* enum.c (enum_uniq): new method Enumerable#uniq.
  [Feature #11090]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55709 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 20 17:39:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* enum.c (enum_uniq): new method Enumerable#uniq.
+	  [Feature #11090]
+
 Wed Jul 20 17:35:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* hash.c (rb_hash_add_new_element): add new element or do nothing
