NEWS: Enumerable#uniq [ci skip]
* NEWS: mention Enumerable#uniq and Enumerator::Lazy#uniq.
  [Feature #11090]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55714 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/NEWS
+++ b/NEWS
@@ -37,6 +37,11 @@ with all sufficient information, see the ChangeLog file or Redmine
 * Enumerable
 
   * Enumerable#sum  [Feature #12217]
+  * Enumerable#uniq  [Feature #11090]
+
+* Enumerator::Lazy
+
+  * Enumerator::Lazy#uniq  [Feature #11090]
 
 * File
 
