* LEGAL: added file list with CC0 license.   [ruby-core:76254][Bug #12549]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55718 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul 21 21:53:30 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
+
+	* LEGAL: added file list with CC0 license.
+	  [ruby-core:76254][Bug #12549]
+
 Wed Jul 20 17:44:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* enumerator.c (lazy_uniq): new method Enumerator::Lazy#uniq.
