* missing/strl{cat,cpy}.c: Update latest upstream files.   [Misc #12205][ruby-core:74487] * LEGAL: Update license for missing/strl{cat,cpy}.c.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55719 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jul 21 22:26:40 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
+
+	* missing/strl{cat,cpy}.c: Update latest upstream files.
+	  [Misc #12205][ruby-core:74487]
+	* LEGAL: Update license for missing/strl{cat,cpy}.c.
+
 Thu Jul 21 21:53:30 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* LEGAL: added file list with CC0 license.
