* LEGAL: Added entry for `lib/rdoc/generator/template/darkfish/css/fonts.css`   [Misc #12550][ruby-core:76255][ci skip]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55723 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul 22 09:19:57 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
+
+	* LEGAL: Added entry for `lib/rdoc/generator/template/darkfish/css/fonts.css`
+	  [Misc #12550][ruby-core:76255][ci skip]
+
 Fri Jul 22 06:28:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* gc.c (run_finalizer): push and exec tag just once, instead of
