--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul 22 09:23:51 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
+
+	* LEGAL: Added entries for files under the USD license.
+	  [Bug #12598][ruby-core:76428][ci skip]
+
 Fri Jul 22 09:19:57 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* LEGAL: Added entry for `lib/rdoc/generator/template/darkfish/css/fonts.css`
