* template/unicode_norm_gen.tmpl: Remove   UnicodeNormalize::UNICODE_VERSION at origin [Feature #12546].
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55725 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul 22 10:32:13 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* template/unicode_norm_gen.tmpl: Remove
+	  UnicodeNormalize::UNICODE_VERSION at origin [Feature #12546].
+
 Fri Jul 22 09:23:51 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* LEGAL: Added entries for files under the USD license.
