--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jul 23 04:06:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/ruby.h (RTEST, NIL_P): use RUBY prefixed name in
+	  macros.
+
 Sat Jul 23 01:41:29 2016  Eric Wong  <e@80x24.org>
 
 	* lib/webrick/httpservlet/cgihandler.rb (do_GET): delete HTTP_PROXY
