--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jul 25 21:11:32 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+
+	* doc/maintainers.rdoc: fix filenames.
+
 Mon Jul 25 16:59:00 2016  Koichi Sasada  <ko1@atdot.net>
 
 	* debug.c (ruby_debug_printf): use rb_raw_obj_info()
