range.c: check_step_domain
* range.c (check_step_domain): check step argument domain by <=>
  method, instead of < and >.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55745 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 25 21:33:13 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* range.c (check_step_domain): check step argument domain by <=>
+	  method, instead of < and >.
+
 Mon Jul 25 21:11:32 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* doc/maintainers.rdoc: fix filenames.
