* test/ruby/enc/test_case_comprehensive.rb: Add explicit skip test for   availability of Unicode data files.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55746 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 26 13:04:59 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* test/ruby/enc/test_case_comprehensive.rb: Add explicit skip test for
+	  availability of Unicode data files.
+
 Mon Jul 25 21:33:13 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* range.c (check_step_domain): check step argument domain by <=>
