--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 26 15:30:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/windows_1251.c, test/ruby/enc/test_case_comprehensive.rb:
+	  Implement non-ASCII case conversion for Windows-1251, by Shunsuke Sato.
+
 Tue Jul 26 13:04:59 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* test/ruby/enc/test_case_comprehensive.rb: Add explicit skip test for
