* enc/windows_1251.c, test/ruby/enc/test_case_comprehensive.rb:   Implement non-ASCII case conversion for Windows-1251, by Shunsuke Sato.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55750 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
-Tue Jul 26 15:30:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+Tue Jul 26 15:54:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/windows_1251.c, test/ruby/enc/test_case_comprehensive.rb:
 	  Implement non-ASCII case conversion for Windows-1251, by Shunsuke Sato.
+
+Tue Jul 26 15:30:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/windows_1253.c, test/ruby/enc/test_case_comprehensive.rb:
+	  Implement non-ASCII case conversion for Windows-1253, by Takumi Koyama.
 
 Tue Jul 26 13:04:59 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
