--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 26 16:33:16 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/windows_1257.c, test/ruby/enc/test_case_comprehensive.rb:
+	  Implement non-ASCII case conversion for Windows-1257, by Sho Koike.
+
 Tue Jul 26 16:19:41 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/windows_1250.c, test/ruby/enc/test_case_comprehensive.rb:
