--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jul 26 19:06:39 2016  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (rb_raw_obj_info): support to show Proc obj.
+
 Tue Jul 26 18:55:55 2016  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (gc_mark): add `inline' explicitly.
