* enc/windows_1253.c: Remove dead code found by Coverity Scan.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55763 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jul 27 10:32:59 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/windows_1253.c: Remove dead code found by Coverity Scan.
+
 Tue Jul 26 22:43:36 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* gc.c (run_finalizer): make saved running finalizer state
